Update order after update function

--- a/config/constants/status_types.yml
+++ b/config/constants/status_types.yml
@@ -2,8 +2,9 @@
   - "incomplete"
   - "complete"
   - "charged"
-  - "paid"
   - "processing"
-  - "delivered"
+  - "paid"
+  - "out_for_fulfillment"
+  - "fulfilled"
   - "refunded"
   - "disputed"
